fix simplified gym import

--- a/docs/source/tutorials/1_Get_Started.ipynb
+++ b/docs/source/tutorials/1_Get_Started.ipynb
@@ -22,8 +22,7 @@
     }
    ],
    "source": [
-    "import myosuite\n",
-    "import gym\n",
+    "from myosuite.utils import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
     "import os"
