--- a/docs/source/tutorials/4a_deprl.ipynb
+++ b/docs/source/tutorials/4a_deprl.ipynb
@@ -29,10 +29,8 @@
     }
    ],
    "source": [
-    "\n",
-    "import gym, myosuite\n",
-    "import deprl\n",
-    "import gym"
+    "from myosuite.utils import gym\n",
+    "import deprl"
    ]
   },
   {
@@ -75,10 +73,10 @@
    "source": [
     "policy = deprl.load_baseline(env)\n",
     "\n",
-    "obs = env.reset()\n",
+    "obs = env.reset()[0]\n",
     "for _ in range(T):\n",
     "    action = policy(obs)\n",
-    "    obs, rew, done, info = env.step(action)\n",
+    "    obs, rew, done, *_, info = env.step(action)\n",
     "    if done:\n",
     "        break\n",
     "env.close()\n",
@@ -95,13 +93,6 @@
    "source": [
     "If you want to load your own policy, replace `deprl.load_baseline(env)` with `deprl.load(path, env)`. This will automatically load it for you. We also provide more advanced commands like `python -m deprl.play --path /folder/` to setup a visualization script."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
