--- a/docs/source/tutorials/3_Analyse_movements.ipynb
+++ b/docs/source/tutorials/3_Analyse_movements.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import myosuite\n",
-    "import gym\n",
+    "from myosuite.utils import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
     "import os"
@@ -45,7 +44,7 @@
     "    for _ in range(100): # 100 samples for each episode\n",
     "        o = env.get_obs()\n",
     "        a = pi.predict(o)[0]\n",
-    "        next_o, r, done, ifo = env.step(a) # take a random action\n",
+    "        next_o, r, done, *_, ifo = env.step(a) # take a random action\n",
     "                    \n",
     "        data_store.append({\"action\":a.copy(), \n",
     "                            \"jpos\":env.sim.data.qpos.copy(), \n",
