--- a/docs/source/tutorials/4c_Train_SB_policy.ipynb
+++ b/docs/source/tutorials/4c_Train_SB_policy.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import myosuite\n",
-    "import gym\n",
+    "from myosuite.utils import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
     "import os"
@@ -92,7 +91,7 @@
     "        frames.append(frame[::-1,:,:])\n",
     "        o = env.get_obs()\n",
     "        a = pi.predict(o)[0]\n",
-    "        next_o, r, done, ifo = env.step(a) # take an action based on the current observation\n",
+    "        next_o, r, done, *_, ifo = env.step(a) # take an action based on the current observation\n",
     "env.close()\n",
     "\n",
     "os.makedirs('videos', exist_ok=True)\n",
