fix SAR tutorial

--- a/docs/source/tutorials/SAR/SAR_tutorial.ipynb
+++ b/docs/source/tutorials/SAR/SAR_tutorial.ipynb
@@ -50,16 +50,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8526f610",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !pip install stable-baselines3==1.7.0\n",
     "# !pip install joblib\n",
     "# !pip install scikit-learn\n",
     "# !pip install tqdm\n",
-    "# !pip install matplotlib"
+    "# !pip install matplotlib\n",
+    "# !pip install gymnasium"
    ]
   },
   {
@@ -220,7 +219,7 @@
     "                o = env.get_obs()\n",
     "                o = vec.normalize_obs(o)\n",
     "                a, __ = model.predict(o, deterministic=False)\n",
-    "                next_o, r, done, info = env.step(a)\n",
+    "                next_o, r, done, *_, info = env.step(a)\n",
     "                rewards += r\n",
     "            preview_rewards.append(rewards)\n",
     "        reward_threshold = np.percentile(preview_rewards, percentile)\n",
@@ -236,14 +235,14 @@
     "                o = env.get_obs()\n",
     "                o = vec.normalize_obs(o)\n",
     "                a, __ = model.predict(o, deterministic=False)\n",
-    "                next_o, r, done, info = env.step(a)\n",
+    "                next_o, r, done, *_, info = env.step(a)\n",
     "                acts.append(env.sim.data.act.copy())\n",
     "                rewards += r\n",
     "\n",
     "            if rewards > reward_threshold:\n",
     "                solved_acts.extend(acts)\n",
     "\n",
-    "    return solved_acts"
+    "    return np.array(solved_acts)"
    ]
   },
   {
@@ -565,6 +564,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39ee90ed-73c9-4b02-ba56-488d539c4993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "muscle_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0c93851e",
    "metadata": {},
    "outputs": [],
@@ -648,6 +657,16 @@
     "        determ=False, pca=pca, ica=ica, normalizer=normalizer, phi=.66, is_sar=True, syn_nosyn=False)\n",
     "\n",
     "show_video(f\"{video_name}.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c68a0a-eede-4505-b800-5c0ccdd831bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gym.make(f'myoLeg{new_terrain}TerrainWalk-v0')"
    ]
   },
   {
@@ -976,7 +995,8 @@
     "        if syn_nosyn:\n",
     "            env = SynNoSynWrapper(gym.make(test_env_name), ica, pca, normalizer, phi)\n",
     "        else:\n",
-    "            env = SynergyWrapper(gym.make(test_env_name), ica, pca, normalizer, phi)\n",
+    "            # env = SynergyWrapper(gym.make(test_env_name), ica, pca, normalizer, phi)\n",
+    "            env = SynergyWrapper(gym.make(test_env_name), ica, pca, normalizer)\n",
     "    else:\n",
     "        env = gym.make(test_env_name)\n",
     "    env.reset()\n",
@@ -992,7 +1012,7 @@
     "            o = env.get_obs()\n",
     "            o = vec.normalize_obs(o)\n",
     "            a, __ = model.predict(o, deterministic=determ)\n",
-    "            next_o, r, done, info = env.step(a)\n",
+    "            next_o, r, done, *_, info = env.step(a)\n",
     "            is_solved.append(info['solved'])\n",
     "        \n",
     "        if sum(is_solved) > 0:\n",
@@ -1085,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
