FEATURE: Moving gym import to __init__ for a shorter import statement. Pinning back the gym version.

--- a/docs/source/tutorials/2_Load_policy.ipynb
+++ b/docs/source/tutorials/2_Load_policy.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from myosuite.utils.import_utils import gym\n",
+    "from myosuite.utils import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
     "import os"
