FEATURE: Moving gym import to __init__ for a shorter import statement

--- a/docs/source/tutorials/4a_deprl.ipynb
+++ b/docs/source/tutorials/4a_deprl.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "from myosuite.utils.import_utils import gym\n",
+    "from myosuite.utils import gym\n",
     "import deprl"
    ]
   },
