--- a/docs/source/tutorials/5_Move_Hand_Fingers.ipynb
+++ b/docs/source/tutorials/5_Move_Hand_Fingers.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from myosuite.utils.import_utils import gym\n",
+    "from myosuite.utils import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
     "import os"
