--- a/docs/source/tutorials/4_Train_policy.ipynb
+++ b/docs/source/tutorials/4_Train_policy.ipynb
@@ -20,11 +20,11 @@
    "source": [
     "from IPython.display import HTML\n",
     "from base64 import b64encode\n",
-    " \n",
+    "\n",
     "def show_video(video_path, video_width = 400):\n",
-    "   \n",
+    "\n",
     "  video_file = open(video_path, \"r+b\").read()\n",
-    " \n",
+    "\n",
     "  video_url = f\"data:video/mp4;base64,{b64encode(video_file).decode()}\"\n",
     "  return HTML(f\"\"\"<video autoplay width={video_width} controls><source src=\"{video_url}\"></video>\"\"\")\n"
    ]
@@ -59,7 +59,7 @@
     "from mjrl.algos.npg_cg import NPG\n",
     "from mjrl.utils.train_agent import train_agent\n",
     "import myosuite\n",
-    "    \n",
+    "\n",
     "policy_size = (32, 32)\n",
     "vf_hidden_size = (128, 128)\n",
     "seed = 123\n",
@@ -92,7 +92,7 @@
     "            evaluation_rollouts=10)\n",
     "\n",
     "print(\"========================================\")\n",
-    "print(\"Job Finished.\") \n",
+    "print(\"Job Finished.\")\n",
     "print(\"========================================\")\n"
    ]
   },
@@ -112,10 +112,10 @@
     "frames = []\n",
     "for ep in range(len(AngleSequence)):\n",
     "    print(\"Ep {} of {} testing angle {}\".format(ep, len(AngleSequence), AngleSequence[ep]))\n",
-    "    env.env.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
-    "    env.env.target_type = 'fixed'\n",
-    "    env.env.weight_range=(0,0)\n",
-    "    env.env.update_target()\n",
+    "    env.unwrapped.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
+    "    env.unwrapped.target_type = 'fixed'\n",
+    "    env.unwrapped.weight_range=(0,0)\n",
+    "    env.unwrapped.update_target()\n",
     "    for _ in range(40):\n",
     "        frame = env.sim.render(width=400, height=400,mode='offscreen', camera_name=None)\n",
     "        frames.append(frame[::-1,:,:])\n",
