--- a/docs/source/tutorials/2_Load_policy.ipynb
+++ b/docs/source/tutorials/2_Load_policy.ipynb
@@ -20,11 +20,11 @@
    "source": [
     "from IPython.display import HTML\n",
     "from base64 import b64encode\n",
-    " \n",
+    "\n",
     "def show_video(video_path, video_width = 400):\n",
-    "   \n",
+    "\n",
     "  video_file = open(video_path, \"r+b\").read()\n",
-    " \n",
+    "\n",
     "  video_url = f\"data:video/mp4;base64,{b64encode(video_file).decode()}\"\n",
     "  return HTML(f\"\"\"<video autoplay width={video_width} controls><source src=\"{video_url}\"></video>\"\"\")\n"
    ]
@@ -66,10 +66,10 @@
     "frames = []\n",
     "for ep in range(len(AngleSequence)):\n",
     "    print(\"Ep {} of {} testing angle {}\".format(ep, len(AngleSequence), AngleSequence[ep]))\n",
-    "    env.env.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
-    "    env.env.target_type = 'fixed'\n",
-    "    env.env.weight_range=(0,0)\n",
-    "    env.env.update_target()\n",
+    "    env.unwrapped.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
+    "    env.unwrapped.target_type = 'fixed'\n",
+    "    env.unwrapped.weight_range=(0,0)\n",
+    "    env.unwrapped.update_target()\n",
     "    for _ in range(40):\n",
     "        frame = env.sim.renderer.render_offscreen(\n",
     "                        width=400,\n",
