fatigue tutorial: train for 1M steps

--- a/docs/source/tutorials/7_Fatigue_Modeling.ipynb
+++ b/docs/source/tutorials/7_Fatigue_Modeling.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,9 +390,9 @@
     "env.unwrapped.set_fatigue_reset_random(True)\n",
     "env.reset()\n",
     "\n",
-    "# Save a checkpoint every 50000 steps\n",
+    "# Save a checkpoint every 100000 steps\n",
     "checkpoint_callback = CheckpointCallback(\n",
-    "  save_freq=50000,\n",
+    "  save_freq=100000,\n",
     "  save_path=f\"./{env_name}/iterations/\",\n",
     "  name_prefix=\"rl_model\",\n",
     "  save_replay_buffer=True,\n",
@@ -400,7 +400,7 @@
     ")\n",
     "\n",
     "model = PPO(\"MlpPolicy\", env, verbose=0)\n",
-    "model.learn(total_timesteps=200000, callback=checkpoint_callback)"
+    "model.learn(total_timesteps=1000000, callback=checkpoint_callback)"
    ]
   },
   {
