--- a/docs/source/tutorials/9_Computed_muscle_control.ipynb
+++ b/docs/source/tutorials/9_Computed_muscle_control.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "In this tutorial a target trajectory will be replicated by MyoElbow (2 dof 6 muscles) using [Computed Muscle Control](https://doi.org/10.1016/S0021-9290(02)00432-3), given a sequence of joint angles, angular velocity, and angular acceleration $\\theta_{exp}, \\dot{\\theta}_{exp}, \\ddot{\\theta}_{exp}$, a sequence of muscle control *u* will be generated. Meanwhile, the muscle control of the [arm26.osim](https://github.com/opensim-org/opensim-models/tree/master/Models/Arm26) model during the same motion were computed using OpenSim CMC for comparison."
+    "In this tutorial a target trajectory will be replicated by MyoElbow (2 dof 6 muscles) using [Computed Muscle Control](<https://doi.org/10.1016/S0021-9290(02)00432-3>), given a sequence of joint angles, angular velocity, and angular acceleration $\\theta_{exp}, \\dot{\\theta}_{exp}, \\ddot{\\theta}_{exp}$, a sequence of muscle control *u* will be generated. Meanwhile, the muscle control of the [arm26.osim](https://github.com/opensim-org/opensim-models/tree/master/Models/Arm26) model during the same motion were computed using OpenSim CMC for comparison."
    ]
   },
   {
